--- a/pyproject.toml
+++ b/pyproject.toml
@@ -29,6 +29,7 @@ dev = [
     "pytest-cov>=6.0",
     "mypy>=1.13",
     "ruff>=0.8",
+    "types-PyYAML>=6.0",
 ]
 
 [tool.setuptools.packages.find]
