Run all tests in CI and add config/auth unit tests
Consolidate CI test steps into a single pytest invocation to run all tests with coverage, simplifying the workflow. Add unit tests for authentication to cover SHA1 and unknown hash algorithm handling (defaulting to SHA256) and token response variants (string token). Add config tests for missing config file, invalid default YAML parsing, and loading default config.yaml when present. These tests improve coverage for edge cases in auth and config handling.

--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -45,21 +45,9 @@ jobs:
         run: |
           mypy src/
 
-      - name: Run unit tests
+      - name: Run all tests with coverage
         run: |
-          pytest tests/unit/ -v --cov=loxone_exporter --cov-report=xml --cov-report=term
-
-      - name: Run contract tests
-        run: |
-          pytest tests/contract/ -v
-
-      - name: Run integration tests
-        run: |
-          pytest tests/integration/ -v
-
-      - name: Run performance tests
-        run: |
-          pytest tests/performance/ -v
+          pytest tests/ -v --cov=loxone_exporter --cov-report=xml --cov-report=term
 
       - name: Upload coverage to Codecov
         if: matrix.python-version == '3.13'
