Add CI security scans, config validation & docs
Enhance CI/CD, security, and configuration handling. Adds CODEOWNERS, dependabot, LICENSE and SECURITY.md; pins GitHub Action and Docker action revisions and expands the workflow with pip-audit, Trivy image scanning, SLSA attestation, and SBOM generation. Make the Dockerfile reproducible by pinning the base image digest and installing from a new requirements.lock. Improve config validation: validate listen_address and miniserver hostnames/IPs, add safe int parsing for env overrides, and update tests to cover these cases. Minor updates: bump pycryptodome, add Ruff security rules/per-file ignores, and generate a random client UUID in loxone_auth.

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -22,7 +22,7 @@ services:
     restart: unless-stopped
 
   prometheus:
-    image: prom/prometheus:latest
+    image: prom/prometheus:v3.2.0
     container_name: loxone-prometheus
     ports:
       - "9090:9090"
@@ -34,14 +34,14 @@ services:
     restart: unless-stopped
 
   grafana:
-    image: grafana/grafana:latest
+    image: grafana/grafana:11.5.1
     container_name: loxone-grafana
     ports:
       - "3000:3000"
     volumes:
       - grafana-data:/var/lib/grafana
     environment:
-      - GF_SECURITY_ADMIN_PASSWORD=admin
+      - GF_SECURITY_ADMIN_PASSWORD=${GRAFANA_ADMIN_PASSWORD:-changeme}
     depends_on:
       - prometheus
     restart: unless-stopped
