Add inspector and structure; update CI & Docker
Add a local inspection tool and project docs, and tweak CI/Docker configuration.

- Add .github/instructions.md with project/Copilot development and architecture instructions.
- Add inspect_controls.py: a script that authenticates to a Loxone Miniserver over WebSocket, downloads LoxAPP3.json, inspects control entries and saves loxone_structure.json for manual inspection.
- Add loxone_structure.json: sample/full Miniserver structure produced by the inspector.
- CI: change pip-audit invocation to skip editable packages (--skip-editable).
- Dockerfile: update pinned python:3.13-slim image digest for builder and final stages.
- docker-compose.yml: remove explicit environment variable passthrough for LOXONE_* (cleanup of compose service env block).
- Update source modules: touch src/loxone_exporter/loxone_auth.py, loxone_client.py and structure.py (internal fixes/updates to exporter implementation).

These changes add a one-off inspection utility and persisted structure fixture, while tightening CI behavior and updating container base image references.

--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -40,7 +40,7 @@ jobs:
 
       - name: Run pip-audit (dependency vulnerability scan)
         run: |
-          pip-audit --strict --desc
+          pip-audit --strict --desc --skip-editable
 
       - name: Run Ruff linter
         run: |
