Add OpenTelemetry (OTLP) export support
Introduce optional OpenTelemetry OTLP export to push metrics to OTLP collectors (gRPC or HTTP). Adds a new OTLP exporter module, configuration schema, health/observability metrics, tests, docs and deployment helpers: new otlp_exporter.py, config/schema/specs, README and config example updates, pyproject dependencies for opentelemetry, docker-compose.override.yml and otel-collector config, Prometheus scrape notes, and corresponding tests and metrics/health integrations. This enables parallel OTLP export with Prometheus scraping, with configurable interval/timeout, TLS/auth headers, retry/backoff, and Prometheus health metrics for export state and performance.

--- a/prometheus.yml
+++ b/prometheus.yml
@@ -8,3 +8,9 @@ scrape_configs:
       - targets: ["exporter:9504"]
     scrape_interval: 15s
     scrape_timeout: 10s
+
+  # Scrape OTLP Collector's Prometheus exporter (when using docker-compose.override.yml)
+  # - job_name: "otel-collector"
+  #   static_configs:
+  #     - targets: ["otel-collector:8889"]
+  #   scrape_interval: 15s
