fix: resolve ruff & mypy violations from OTLP merge
- Fix instructions.md: Use 'Lint, Type-Check & Format' section (adds mypy requirement)
- Fix config.py: Use ConfigurationError alias, correct AuthConfig.headers default to {}
- Fix metrics.py: Remove registry=None from OTLP metrics to allow default registration
- Fix otlp_exporter.py: Use union type for OTLPMetric.data_points (mypy compatibility)
- Fix server.py: Add explicit dict[str, Any] type annotation for body variable

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -56,6 +56,9 @@ disallow_untyped_defs = true
 [[tool.mypy.overrides]]
 module = [
     "Crypto.*",
+    "grpc",
+    "grpc.*",
+    "opentelemetry.*",
 ]
 ignore_missing_imports = true
 
